--- a/ui5app/webapp/view/App.view.xml
+++ b/ui5app/webapp/view/App.view.xml
@@ -1,7 +1,10 @@
 <mvc:View controllerName="ui5app.controller.App"
     xmlns:html="http://www.w3.org/1999/xhtml"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
+    xmlns:core="sap.ui.core"
     xmlns="sap.m">
-    <App id="app">
-    </App>
+    <Shell backgroundColor="#003C6C" logo="https://www.vkb.de/export/sites/vkb/_resources/bilder/vkb_logo.svg">
+        <App id="app" class="myAppDemoWT"/> 
+    </Shell>
+  
 </mvc:View>
